# aws-kiro-hackday

./: .eslintrc.json  .gitignore  README.md  WHAT_WE_ARE_WORKING_ON.md  docker-compose.yml  package-lock.json  package.json  readme.md
.kiro/settings/: mcp.json
.kiro/specs/budget-editor/: design.md  requirements.md  tasks.md
.kiro/specs/grant-manager/: design.md  requirements.md  tasks.md
.kiro/specs/grants-management-system/: design.md  requirements.md  tasks.md
backend/: .env.example  Dockerfile  manage.py  pyproject.toml
backend/accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/applications/: __init__.py  admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/assessments/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/audit/: __init__.py  admin.py  apps.py  middleware.py  models.py  serializers.py  urls.py  views.py
backend/communications/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/grants_management/: asgi.py  middleware.py  permissions.py  settings.py  urls.py  validators.py  wsgi.py
